--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
   <meta name="screen-orientation" content="portrait">
   <meta name="orientation" content="portrait">
-  <title>K STADIUM GAME FESTA</title>
+  <title>OVER101</title>
 </head>
 
 <body>
